Fix overflow bug in highlighter

--- a/_scss/pygments/_config.scss
+++ b/_scss/pygments/_config.scss
@@ -11,6 +11,6 @@
   pre {
     margin: 0;
     white-space: pre;
-    overflow-x: scroll;
+    overflow-x: auto;
   }
 }
