--- a/css/main.css
+++ b/css/main.css
@@ -1158,6 +1158,6 @@ green     #859900  operators, other keywords
   .highlight pre {
     margin: 0;
     white-space: pre;
-    overflow-x: scroll; }
+    overflow-x: auto; }
 
 /*# sourceMappingURL=main.css.map */
